syntax = "proto3";

option java_multiple_files = true;
package pl.pb.grpcexample.grpcmapping;


message Book_V1{
  string author = 1;
  string title = 2;
}

message Book_V2{
  string author = 1;
  string title = 2;
  string publisher = 3;
}

message Book_V3{
  string author = 1;
  string title = 2;
  reserved "publisher";
  reserved 3;
  int32 pages = 4;
}

message Book_WhenNameOfFieldIsChanged{
  string author = 1;
  string title = 2;
  string language = 3;
}

message Book_WhenTypeOfFieldIsChanged{
  string author = 1;
  string title = 2;
  int32 pages = 3;
}
